# pkgbuilds

./: .gitignore  .gitmodules
aur-updater/: Cargo.toml  Makefile  README.md  aur-updater.env.example  aur-updater.service  aur-updater.timer  config.toml  deny.toml  notify.py  pkgbuild.py  updater.py
aur-updater/src/: main.rs  notify.rs  pkgbuild.rs
